--- a/assets/css/paginainicial.css
+++ b/assets/css/paginainicial.css
@@ -116,6 +116,7 @@ main {
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
+  margin-bottom: 3%;
 }
 
 .texto1{
@@ -124,6 +125,7 @@ main {
   text-align: center;
   padding: 100px;
   margin: 0%;
+  margin-top: 5%;
 }
 
 .texto1 h2 {
