--- a/assets/css/prevencoes.css
+++ b/assets/css/prevencoes.css
@@ -89,25 +89,80 @@ header {
 }
 
 /*mains*/
-  main {
-      display: flex;
-      justify-content: space-between;
-      padding: 20px;
-      width: 100%;
-     background-color: #e9e9e9;
+.container {
+    position: relative;
+    width: 100%;
+    margin: auto;
+    overflow: hidden;
+    padding: 80px;
+    display: flex;
+    justify-content: space-between;
+    padding: 50px;
+    width: 100%;
+    background-color: #e9e9e9;
   }
+
+  .carrossel {
+    display: flex;
+    transition: transform 0.5s ease-in-out;
+}
+
+.carrossel-item {
+    min-width: 100%;
+    box-sizing: border-box;
+}
+
+.carrossel-control-prev, .carrossel-control-next {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    background-color: rgba(0,0,0,0.5);
+    border: none;
+    color: white;
+    font-size: 2rem;
+    cursor: pointer;
+    z-index: 1;
+}
+
+.carrossel-control-prev {
+    left: 0;
+}
+
+.carrossel-control-next {
+    right: 0;
+}
   
-.recomendacoes-seguranca {
-      flex: 1;
-      padding: 10px;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-      margin: 10px;
-      border-radius: 8px;
-      background-color: white;
+.recomendacoes-seguranca{
+    display: flex;
+    flex-direction:column;
+    justify-content:space-between;
+    align-items: center;
+    padding: 30px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    margin: 10px;
+    border-radius: 8px;
+    background-color: white;
   }
+
+ #texto1{
+    display: flex;
+    flex-direction:column;
+    justify-content:flex-start;
+    align-items: left;
+    padding: 30px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    border-radius: 8px;
+    background-color: rgb(235, 233, 233);
+  }
+
+
   .prevencao-tipos {
+    display: flex;
     flex: 1;
-    padding: 10px;
+    flex-direction:column;
+    justify-content:space-between ;
+    align-items: center;
+    padding: 20px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     margin: 10px;
     border-radius: 8px;
@@ -122,21 +177,17 @@ header {
     height: auto;
   }
   
-  main section h2 {
-      text-align: center;
-  
-  }
   
   /* Adicionando estilos básicos para botões e imagens */
-button {
-    padding: 10px 20px;
-    margin-top: 10px;
-    background-color: #007BFF;
-    color: white;
-    border: none;
-    cursor: pointer;
-    border-radius: 5px;
-}
+  button {
+      padding: 10px 20px;
+      margin-top: 10px;
+      background-color: #007BFF;
+      color: white;
+      border: none;
+      cursor: pointer;
+      border-radius: 5px;
+  }
   
   button:hover {
       background-color: #0056b3;
@@ -145,7 +196,8 @@ button {
 
 
   footer {
-    background-color: #007bff;  
+    background-color: #007bff;
+    height: 140px;  
     width: 100%;
     position: relative;
     color: white;
@@ -158,13 +210,12 @@ button {
     align-items: center;
     justify-content: space-around;
     padding: 10px 20px;
-    width: 100%;
     height: 100%;
 }
 
 #qrcode {
-    height: 120px;
-    width: 120px;
+    height: 100px;
+    width: 100px;
 }
 
 #bandeira {
@@ -176,7 +227,6 @@ button {
 .elementsfooter {
     display: flex;
     margin-bottom: 5px;
-    font-size: 90px;
 }
 
 .elementsfooter a {
@@ -188,8 +238,8 @@ button {
 
 .elementsfooter img {
     margin-right: 10px;
-    height: 30px; 
-    width: 30px;   
+    height: 20px; 
+    width: 20px;   
 }
 
 .elementsfooter h3 {
@@ -209,9 +259,9 @@ button {
 
 .diagonal-line {
     position: absolute;
-    width: 2px;
+    width: 1px;
     background-color: rgb(0, 0, 0);
-    height: 100%; 
+    height: 180px; 
 }
 
 .diagonal-line.left {
